unpackaged/objects/Preferred_dealer_item__c.object
<CustomObject>
  <fields>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dealers</relationshipLabel>
    <relationshipName>Preferred_dealer_items1</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer</label>
    <lookupFilter>
      <active>true</active>
      <booleanFilter>1 OR (2 AND 3)</booleanFilter>
      <filterItems>
        <field>Account.RecordTypeId</field>
        <operation>equals</operation>
        <value>ERP Distributor, Non-ERP Distributor, DNA Distributor</value>
      </filterItems>
      <filterItems>
        <field>Account.RecordTypeId</field>
        <operation>equals</operation>
        <value>CIM Account</value>
      </filterItems>
      <filterItems>
        <field>Account.OneAccount_Type__c</field>
        <operation>equals</operation>
        <value>Distributor</value>
      </filterItems>
      <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dealers (Dealer)</relationshipLabel>
    <relationshipName>Preferred_dealer_items</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Dealer_email__c</fullName>
    <formula>Dealer__r.General_Info_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealer email</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Default_dealer__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Default dealer</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>ProductCategories__c</fullName>
    <label>Product Categories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Consumables</fullName>
        </value>
        <value>
          <fullName>Digital Group</fullName>
        </value>
        <value>
          <fullName>Endodontics</fullName>
        </value>
        <value>
          <fullName>Equipment &amp; Imaging</fullName>
        </value>
        <value>
          <fullName>Implants</fullName>
        </value>
        <value>
          <fullName>Orthodontics</fullName>
        </value>
        <value>
          <fullName>Prosthetics</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <label>Dealer</label>
  <listViews>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
  </listViews>
  <nameField>
    <displayFormat>PDI{00000}</displayFormat>
    <label>Dealer Name</label>
    <type>AutoNumber</type>
  </nameField>
  <pluralLabel>Dealers</pluralLabel>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>